z-index issue + top bar fixed

--- a/src/app/@shell/ui/history/history.component.scss
+++ b/src/app/@shell/ui/history/history.component.scss
@@ -70,8 +70,3 @@ th{
 td {
   @apply my-40
 }
-table {
-  -webkit-box-shadow: 7px 7px 5px 0px rgba(50, 50, 50, 0.75);
-  -moz-box-shadow:    7px 7px 5px 0px rgba(50, 50, 50, 0.75);
-  box-shadow:         7px 7px 5px 0px rgba(50, 50, 50, 0.75);
-}
