--- a/src/app/@shell/ui/marketplace-search/marketplace-search.component.scss
+++ b/src/app/@shell/ui/marketplace-search/marketplace-search.component.scss
@@ -5,7 +5,7 @@ button{
 
 
 mat-sidenav {
-  @apply absolute top-0 left-0 min-h-screen flex flex-col justify-center items-start pt-8 pb-5;
+  @apply absolute top-0 left-0  flex flex-col justify-center items-start pt-8 pb-5;
   width: 100%;
   background: rgba(255,255,255,0.5);
   backdrop-filter: blur(9px);
@@ -52,6 +52,9 @@ mat-sidenav {
     }
   }
 }
+mat-sidenav-container {
+  box-shadow: rgba(4, 17, 29, 0.13) 0px 0px 10px 0px !important;
+}
 
 .menu-link:hover {
   @apply text-gray-700
@@ -72,9 +75,11 @@ mat-sidenav {
 }
 
 
-::ng-deep mat-sidenav-container {
-  @apply mt-9 lg:mt-9;
-  // overflow: hidden;
+::ng-deep mat-sidenav-container ::-webkit-scrollbar {
+  display: none;
+  @apply lg:mt-9;
+  overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 
@@ -83,15 +88,17 @@ mat-sidenav {
   top: 0px;
   background: rgba(255,255,255,0.5);
   backdrop-filter: blur(9px);
-  z-index: 1200;
+  z-index: 999;
   padding-top: 0px;
 }
 
 ::ng-deep .mat-elevation-z5 {
   @apply flex justify-between shadow-xl p-5 lg:p-0 sm:mt-0  h-16;
   position: relative;
+
 }
 
-// mat-toolbar {
-//   @apply pt-3
-// }
+mat-toolbar {
+  @apply mt-6 lg:mt-0 z-50;
+}
+
